--- a/src/defaultV2-theme/blocks/sd-context-btn.scss
+++ b/src/defaultV2-theme/blocks/sd-context-btn.scss
@@ -4,27 +4,37 @@
   border-radius: calcSize(12.5);
   border: none;
   outline: none;
+
+  .sv-svg-icon {
+    margin: 0;
+  }
+
   svg {
     display: block;
     width: multiply(1.5, $font-editorfont-size);
     height: multiply(1.5, $font-editorfont-size);
   }
+
   use {
     fill: $foreground-light;
   }
+
   cursor: pointer;
 }
+
 .sd-context-btn:hover,
 .sd-context-btn:focus {
   use {
     fill: $primary;
   }
+
   &.sd-context-btn--negative {
     use {
       fill: $red;
     }
   }
 }
+
 .sd-context-btn:disabled {
   opacity: 0.25;
 }
