--- a/packages/survey-angular-ui/src/components/action-bar/action.component.html
+++ b/packages/survey-angular-ui/src/components/action-bar/action.component.html
@@ -1,6 +1,5 @@
-
 <ng-template #template>
-  <div [class]="model.getActionRootCss()" [id]="model.id">
+  <div [class]="model.getActionRootCss()" [id]="id">
     <div class="sv-action__content">
       <ng-container *ngIf="model.needSeparator">
         <div class="sv-action-bar-separator"></div>
