--- a/src/defaultV2-theme/blocks/cover.scss
+++ b/src/defaultV2-theme/blocks/cover.scss
@@ -3,9 +3,15 @@
   box-sizing: border-box;
   position: relative;
 }
+
 .sv-conver__content {
   height: 100%;
   position: relative;
+  display: grid;
+  gap: 0;
+  // grid-auto-rows: min-content;
+  grid-auto-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
 }
 
 .sv-conver__content--static {
@@ -29,22 +35,28 @@
   background-repeat: no-repeat;
 }
 
-.sv-cover__text {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  gap: 0;
-  grid-auto-rows: min-content;
+.sv-cover__cell {
+  position: relative;
 }
 
-.sv-cover__text-logo {
+.sv-cover__cell-content {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.sv-cover__logo {
   display: flex;
 }
 
-.sv-cover__text-title {
+.sv-cover__title {
   display: flex;
 }
 
-.sv-cover__text-description {
+.sv-cover__description {
   display: flex;
 }
