--- a/src/knockout/components/cover/cover.html
+++ b/src/knockout/components/cover/cover.html
@@ -4,28 +4,10 @@
   <div data-bind="style: model.backgroundImageStyle, css: model.backgroundImageClasses"></div>
   <!-- /ko -->
   <div data-bind="css: model.contentClasses">
-    <div class="sv-cover__text" data-bind="css: survey.css.headerText">
-      <!-- ko if: survey.hasLogo -->
-      <div class="sv-cover__text-logo" data-bind="style: model.logoStyle">
-      <!-- ko component: { name: survey.getElementWrapperComponentName(survey, 'logo-image'), params: survey.getElementWrapperComponentData(survey, 'logo-image') } -->
-      <!-- /ko -->
-      </div>
-      <!-- /ko -->
-      <!-- ko if: survey.hasTitle -->
-      <div class="sv-cover__text-title" data-bind="style: model.titleStyle">
-      <!-- ko component: { name: 'survey-element-title', params: { element: survey } } -->
-      <!-- /ko -->
-      </div>
-      <!-- /ko -->
-      <!-- ko if: survey.renderedHasDescription -->
-      <div class="sv-cover__text-description" data-bind="style: model.descriptionStyle">
-        <h5 data-bind="css: survey.css.description">
-          <!-- ko template: { name: 'survey-string', data: survey.locDescription } -->
-          <!-- /ko -->
-        </h5>
-      </div>
-      <!-- /ko -->
-    </div>
+  <!-- ko foreach: model.cells -->
+    <!-- ko component: { name: 'sv-cover-cell', params: { model: $data } } -->
+    <!-- /ko -->
+  <!--/ko-->
   </div>
 </div>
 <!-- /ko -->
