Work for #6908: add hover state for take picture button

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -319,6 +319,11 @@
   left: 50%;
   transform: translateX(-50%);
   padding: calcSize(2);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 0 2px $red;
+  }
 }
 
 .sd-file__video-container {
