--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -38,6 +38,7 @@
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
   border-radius: calcCornerRadius(1) calcCornerRadius(1) 0 0;
+  display: flex;
 }
 
 .sv_window_content {
