Button for adding row appears in matrixdynamic question even though a… (#7007)
* Button for adding row appears in matrixdynamic question even though adding rows is not allowed fix #6990

* Fix Angular template #6990

* Fix visual tests #6990

--- a/packages/survey-angular-ui/src/questions/matrixdynamic.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixdynamic.component.html
@@ -6,7 +6,9 @@
     <sv-ng-matrix-table *ngIf="model.renderedTable?.showTable" [question]="model" [table]="model.renderedTable"></sv-ng-matrix-table>
     <div *ngIf="!model.renderedTable.showTable" [class]="model.cssClasses.emptyRowsSection">
       <div [class]="model.cssClasses.emptyRowsText" [model]="model.locEmptyRowsText" sv-ng-string></div>
-      <ng-container *ngTemplateOutlet="addRowButton"></ng-container>
+      <ng-container *ngIf="model.renderedTable.showAddRow">
+        <ng-container  *ngTemplateOutlet="addRowButton"></ng-container>
+      </ng-container>
     </div>
     <div *ngIf="model.renderedTable.showAddRowOnBottom" [class]="model.cssClasses.footer">
       <ng-container *ngTemplateOutlet="addRowButton"></ng-container>
