--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -59,8 +59,8 @@
   .sv-string-viewer {
     white-space: normal;
 
-    &::before {
-      content: "\200B";
+    &:empty::before {
+        content: " ";
     }
   }
 }
