work for #6655 fix min height

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -136,6 +136,7 @@ body {
 
 .sd-root-modern__wrapper {
   position: relative;
+  min-height: 100%;
 }
 
 .sd-root-modern--full-container .sd-root-modern__wrapper--fixed {
