work for the https://github.com/surveyjs/survey-library/issues/6362

--- a/src/defaultV2-theme/blocks/sd-button.scss
+++ b/src/defaultV2-theme/blocks/sd-button.scss
@@ -49,3 +49,8 @@
   color: $primary-foreground-disabled;
   pointer-events: none;
 }
+
+.sd-btn--danger {
+  background-color: $red;
+  color: $primary-foreground;
+}
