work for the https://github.com/surveyjs/survey-library/issues/6362

--- a/src/defaultV2-theme/blocks/sd-button.scss
+++ b/src/defaultV2-theme/blocks/sd-button.scss
@@ -54,3 +54,13 @@
   background-color: $red;
   color: $primary-foreground;
 }
+
+.sd-btn--danger:hover {
+  background-color: $red;
+  color: $primary-foreground;
+}
+
+.sd-btn--danger:disabled {
+  color: $red-forecolor;
+  pointer-events: none;
+}
