work for #6655 fix angular template

--- a/packages/survey-angular-ui/src/survey-content.component.html
+++ b/packages/survey-angular-ui/src/survey-content.component.html
@@ -34,7 +34,8 @@
           <div *ngIf="model.state === 'empty'" [class]="model.css.bodyEmpty">{{model.emptySurveyText}}</div>
         </div>
       </form>
-    <sv-brand-info *ngIf="model.showBrandInfo"></sv-brand-info>
-    <sv-notifier [notifier]="model.notifier"></sv-notifier>
+      <sv-brand-info *ngIf="model.showBrandInfo"></sv-brand-info>
+      <sv-notifier [notifier]="model.notifier"></sv-notifier>
+    </div>
   </div>
 </ng-template>
