work for the https://github.com/surveyjs/survey-library/issues/6362

--- a/src/defaultV2-theme/blocks/sd-button.scss
+++ b/src/defaultV2-theme/blocks/sd-button.scss
@@ -21,6 +21,11 @@
   outline: none;
 }
 
+.sd-btn--small {
+  flex-grow: 1;
+  padding: calcSize(2) calcSize(4);
+}
+
 .sd-btn:hover {
   background-color: $background-dark;
 }
