--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -142,9 +142,14 @@ body {
 
 .sd-root-modern--full-container .sd-root-modern__wrapper--fixed {
   position: static;
-  overflow: auto;
   width: 100%;
   height: 100%;
+
+  form {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .sv-popup {
