--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -36,6 +36,9 @@
   font-family: var(--font-family, $font-family);
   font-size: calcFontSize(1);
 }
+.sd-dropdown input[readonly] {
+  pointer-events: none;
+}
 
 .sd-dropdown__value {
   width: 100%;
@@ -70,6 +73,7 @@
   justify-content: center;
   align-items: center;
   padding-inline-end: calcSize(0.5);
+  pointer-events: none;
 }
 
 .sd-dropdown_chevron-button-svg,
