--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -66,7 +66,10 @@ sv-popup {
 .sv-popup--confirm-delete {
   .sv-popup__container {
     border-radius: calcSize(1);
-    box-shadow: none;
+  }
+
+  .sv-popup__body-content {
+    border-radius: calcSize(1);
   }
 
   .sv-popup__body-header {
