Drop-down menu doesn't disappear after clicking on the button. #6672 - fixed default theme for tests

--- a/src/main.scss
+++ b/src/main.scss
@@ -944,6 +944,9 @@ body {
   }
 }
 
+.sv_q_dropdown_control input[readonly] {
+  pointer-events: none;
+}
 @import "./main.rtl.scss";
 @import "./main.m600.scss";
 
