#6672 Drop-down menu doesn't disappear after clicking on the button. (#7023)
* #6672 Drop-down menu doesn't disappear after clicking on the button.
Fixes #6672

* #6672 revert css changes

* #6672 search input by rootElement field

* #6672 Drop-down menu doesn't disappear after clicking on the button.
Fixes #6672

* #6672 Drop-down menu doesn't disappear after clicking on the button.
Fixes #6672

* #6672 - rename method

* Drop-down menu doesn't disappear after clicking on the button. #6672 - fixed default theme for tests

* #6672 - fix angular events

---------

Co-authored-by: Aleksey Novikov <novikov@abrisplatform.com>

--- a/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
+++ b/packages/survey-angular-ui/src/components/dropdown/dropdown.component.html
@@ -45,7 +45,7 @@
         <sv-ng-string *ngIf="model.selectedItemLocText" [model]="model.selectedItemLocText"></sv-ng-string>
         <div>{{ model.readOnlyText }}</div>
     </div>
-    <div *ngIf="model.cssClasses.chevronButtonIconId" [class]="model.cssClasses.chevronButton">
+    <div *ngIf="model.cssClasses.chevronButtonIconId" [class]="model.cssClasses.chevronButton" (pointerdown)="chevronPointerDown($event)">
         <svg [iconName]="model.cssClasses.chevronButtonIconId" [partCss]="model.cssClasses.chevronButtonSvg" [size]="'auto'" sv-ng-svg-icon></svg>
     </div>
 </div>
