--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -135,6 +135,23 @@ body {
   --sd-timer-size: calc(9 * #{$base-unit});
 }
 
+.sd-root-modern__wrapper {
+  position: relative;
+  min-height: 100%;
+}
+
+.sd-root-modern--full-container .sd-root-modern__wrapper--fixed {
+  position: static;
+  width: 100%;
+  height: 100%;
+
+  form {
+    overflow: auto;
+    width: 100%;
+    max-height: 100%;
+  }
+}
+
 .sv-popup {
   .sv-popup__scrolling-content {
     scrollbar-width: thin;
