--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -4,9 +4,10 @@
 </script>
 
 <script type="text/html" id="survey-content-template">
-  <div data-bind="css: rootCss, elementStyle: themeVariables, event: { scroll: $data.onScroll }">
+  <div data-bind="css: rootCss, elementStyle: themeVariables">
+    <div data-bind="css: wrapperFormCss">
       <!-- ko if: !!renderBackgroundImage -->
-      <div data-bind="css: css.rootBackgroundImage, style: backgroundImageStyle"></div>
+      <div data-bind="css: css.rootBackgroundImage, elementStyle: backgroundImageStyle"></div>
       <!-- /ko -->
       <form onsubmit="return false;">
           <div class="sv_custom_header" data-bind="visible: !hasLogo"></div>
@@ -55,5 +56,6 @@
       <!-- /ko -->
       <!-- ko component: { name: 'sv-notifier', params: { notifier: notifier } } -->
       <!-- /ko -->
+    </div>
   </div>
 </script>
