PR: Implement a proprietary confirmation dialog (#7015)
* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* Update descriptions

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/private-tasks/issues/300

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* work for the https://github.com/surveyjs/survey-library/issues/6362

* Fix popup container is not removed in Vue

---------

Co-authored-by: Roman Tsukanov <roman.tsukanov@devexpress.com>
Co-authored-by: Dmitry Kuzin <dk981234@gmail.com>

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -63,6 +63,40 @@ sv-popup {
   }
 }
 
+.sv-popup--confirm-delete {
+  .sv-popup__container {
+    border-radius: calcSize(1);
+  }
+
+  .sv-popup__body-content {
+    border-radius: calcSize(1);
+  }
+
+  .sv-popup__body-header {
+    color: $font-editorfont-color;
+    margin-bottom: 0;
+
+    /* UI/Default */
+    font-family: $font-family;
+    font-size: calcFontSize(1);
+    font-style: normal;
+    font-weight: 400;
+    line-height: calcLineHeight(1.5);/* 150% */
+  }
+
+  .sv-popup__scrolling-content {
+    display: none;
+  }
+
+  .sv-popup__body-footer {
+    padding-bottom: 0;
+
+    .sv-action-bar {
+      gap: calcSize(2);
+    }
+  }
+}
+
 .sv-popup.sv-popup--modal>.sv-popup__container {
   position: static;
 }
