--- a/packages/survey-angular-ui/src/components/cover/cover.component.html
+++ b/packages/survey-angular-ui/src/components/cover/cover.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-  <div *ngIf="(survey.titleView === 'cover' && survey.renderedHasHeader)" [class]="model.coverClasses" [style]="{ height: model.renderedHeight, backgroundColor: model.backgroundColor }">
+  <div *ngIf="(survey.titleView === 'cover' && survey.renderedHasHeader)" [class]="model.coverClasses" [style]="{ height: model.renderedHeight }">
     <div *ngIf="!!model.backgroundImage" [style]="model.backgroundImageStyle" [class]="model.backgroundImageClasses"></div>
     <div [class]="model.contentClasses">
       <ng-container *ngFor="let cell of model.cells">
