--- a/src/defaultV2-theme/blocks/cover.scss
+++ b/src/defaultV2-theme/blocks/cover.scss
@@ -2,6 +2,16 @@
   padding: calcSize(5);
   box-sizing: border-box;
   position: relative;
+  background-color: $cover-backcolor;
+}
+
+.sv-conver__overlap {
+  margin-bottom: calcSize(-13);
+  padding-bottom: calcSize(13);
+}
+
+.sv-conver__overlap.sv-conver__without-background {
+  margin-bottom: calcSize(-8);
 }
 
 .sv-conver__without-background {
@@ -50,6 +60,7 @@
   width: max-content;
   top: 0;
   bottom: 0;
+  gap: calcSize(1);
 }
 
 .sv-cover__cell--left {
@@ -73,6 +84,7 @@
 
 .sv-cover__logo {
   display: flex;
+  margin-bottom: calcSize(2);
 }
 
 .sv-cover__title {
@@ -80,7 +92,8 @@
 }
 
 .sv-cover__title .sd-title {
-  color: $foreground-dim;
+  margin: 0;
+  color: $cover-title-forecolor;
   font-family: $font-surveytitle-family;
   font-size: $font-surveytitle-size;
   font-weight: $font-surveytitle-weight;
@@ -92,5 +105,6 @@
 }
 
 .sv-cover__description .sd-description {
+  margin: 0;
   color: $foreground-dim-light;
 }
