Work for #6578 - Page paddings in different modes - updated screenshots

--- a/src/defaultV2-theme/blocks/sd-body.scss
+++ b/src/defaultV2-theme/blocks/sd-body.scss
@@ -86,6 +86,19 @@
   }
 }
 
+.sd-root--compact {
+  .sd-body {
+
+    &.sd-body--responsive,
+    &.sd-body--static {
+
+      .sd-body__navigation {
+        padding-top: calcSize(7);
+      }
+    }
+  }
+}
+
 .sd-body__navigation.sd-action-bar {
   box-sizing: border-box;
   padding: calcSize(2) calcSize(2);
