--- a/src/components-container.scss
+++ b/src/components-container.scss
@@ -16,5 +16,10 @@ sv-components-container,
 
 .sv-components-column--expandable {
   flex-grow: 1;
-  width: 1px;
+}
+
+.sv-components-row {
+  .sv-components-column--expandable {
+    width: 1px;
+  }
 }
