Work for #7040 - apply width for columns in row only

--- a/src/components-container.scss
+++ b/src/components-container.scss
@@ -19,7 +19,7 @@ sv-components-container,
 }
 
 .sv-components-row {
-  .sv-components-column--expandable {
+  &>.sv-components-column--expandable {
     width: 1px;
   }
 }
