Work for #6578 - Page paddings in different modes - fixed description padding

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -18,8 +18,21 @@
   margin-top: 0;
 }
 
-.sd-page__title~.sd-row:first-of-type.sd-page__row {
-  margin-top: calcSize(3);
+.sd-page__title,
+.sd-page__description {
+  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+    margin-top: calcSize(3);
+  }
+
+  &~.sd-page__row.sd-row--compact {
+    margin-top: var(--sd-base-vertical-padding);
+  }
+}
+
+.sd-row.sd-page__row:not(.sd-row--compact) {
+  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+    margin-top: calcSize(2);
+  }
 }
 
 .sd-row--multiple {
