--- a/src/defaultV2-theme/blocks/cover.scss
+++ b/src/defaultV2-theme/blocks/cover.scss
@@ -80,11 +80,12 @@
 }
 
 .sv-cover__title .sd-title {
+  --default-font-size: var(--sjs-font-surveytitle-size, calc(2 * (var(--sjs-font-size, 16px))));
   color: $foreground-dim;
   font-family: $font-surveytitle-family;
-  font-size: $font-surveytitle-size;
+  font-size: var(--default-font-size);
   font-weight: $font-surveytitle-weight;
-  line-height: multiply(1.25, $font-surveytitle-size);
+  line-height: multiply(1.25, var(--default-font-size));
 }
 
 .sv-cover__description {
