--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -29,11 +29,12 @@
   flex-grow: 1;
 
   .sd-title {
+    --default-font-size: var(--sjs-font-surveytitle-size, calc(2 * (var(--sjs-font-size, 16px))));
     color: $primary;
     font-family: $font-surveytitle-family;
-    font-size: $font-surveytitle-size;
+    font-size: var(--default-font-size);
     font-weight: $font-surveytitle-weight;
-    line-height: multiply(1.25, $font-surveytitle-size);
+    line-height: multiply(1.25, var(--default-font-size));
   }
 
   h3 {
@@ -62,6 +63,7 @@
 }
 
 .sd-root-modern {
+
   .sv-conver__content,
   .sd-container-modern__title {
     .sd-header__text h3 {
