Fixed #7040 - TOC - some questions (matrix dropdown and similar wide ones) don't fit survey container width (#7041)
* Fixed #7040 - TOC - some questions (matrix dropdown and similar wide ones) don't fir survey container width

* Work for #7040 - TOC - some questions (matrix dropdown and similar wide ones) don't fir survey container width - fixed central content column width w/o TOC

* Work for #7040 - apply width for columns in row only

* Work for #7040 - TOC - some questions (matrix dropdown and similar wide ones) don't fir survey container width - fixed vr-test

* Work for #7040 - TOC - some questions (matrix dropdown and similar wide ones) don't fir survey container width - fixed vr-test

* Work for #7040 - updated etalon

---------

Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/src/components-container.scss
+++ b/src/components-container.scss
@@ -17,3 +17,9 @@ sv-components-container,
 .sv-components-column--expandable {
   flex-grow: 1;
 }
+
+.sv-components-row {
+  &>.sv-components-column--expandable {
+    width: 1px;
+  }
+}
