--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -18,11 +18,20 @@
   margin-top: 0;
 }
 
-.sd-page__title~.sd-row.sd-page__row {
-  margin-top: calcSize(2);
+.sd-page__title,
+.sd-page__description {
+  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+    margin-top: calcSize(3);
+  }
 
-  &.sd-row--compact {
+  &~.sd-page__row.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
+  }
+}
+
+.sd-row.sd-page__row:not(.sd-row--compact) {
+  &~.sd-row.sd-page__row:not(.sd-row--compact) {
+    margin-top: calcSize(2);
   }
 }
 
@@ -43,6 +52,7 @@
 .sd-panel {
   .sd-row--multiple {
     row-gap: var(--sd-base-vertical-padding);
+
     &>div {
       padding-left: var(--sd-base-padding);
     }
@@ -54,6 +64,7 @@
     padding-left: var(--sd-base-padding);
   }
 }
+
 .sd-page__row.sd-row--multiple {
   margin-left: calcSize(-2);
   width: calc(100% + 2 * var(--sjs-base-unit, var(--base-unit, 8px)));
@@ -64,7 +75,7 @@
     margin-left: calc(-1 * var(--sd-base-padding));
     width: calc(100% + var(--sd-base-padding));
   }
-  
+
 }
 
 .sd-row__panel {
