--- a/packages/survey-angular-ui/src/questions/file.component.html
+++ b/packages/survey-angular-ui/src/questions/file.component.html
@@ -28,7 +28,7 @@
       <ng-container *ngTemplateOutlet="fileCleanButton; context: { css: model.showRemoveButton }"></ng-container>
     </ng-container>
     <ng-container *ngIf="model.allowShowPreview">
-      <ng-container *ngTemplateOutlet="filePreview"></ng-container>
+      <ng-template [component]="{ name: 'sv-file-preview', data: { question: model } }"></ng-template>
     </ng-container>
     <ng-container *ngIf="model.showRemoveButtonBottom">
       <ng-container *ngTemplateOutlet="fileCleanButton; context: { css: model.showRemoveButtonBottom }"></ng-container>
@@ -36,34 +36,6 @@
     <sv-action-bar *ngIf="model.fileNavigatorVisible" [model]="model.fileNavigator"></sv-action-bar>
   </div>
 </div>
-<ng-template #filePreview>
-  <div [class]="model.cssClasses.fileList || undefined">
-    <span *ngFor="let val of model.previewValue; index as index; trackBy: trackFilesFn"
-      [visible]="val && model.isPreviewVisible(index)" [class]="model.cssClasses.preview">
-      <div *ngIf="val.name && model.cssClasses.fileSign" [class]="model.cssClasses.fileSign">
-        <a (click)="model.doDownloadFile($event, val)" [attr.href]="val.content | safeUrl" [attr.title]="val.name"
-          [attr.download]="val.name" [style.width]="model.imageWidth">{{ val.name }}</a>
-      </div>
-      <div [class]="model.cssClasses.imageWrapper">
-        <img *ngIf="model.canPreviewImage(val)" [attr.src]="val.content | safeUrl" [style.height]="model.imageHeight"
-          [style.width]="model.imageWidth" alt="File preview" />
-        <svg *ngIf="model.defaultImage(val)" [iconName]="model.cssClasses.defaultImageIconId"
-          [partCss]="model.cssClasses.defaultImage" [size]="'auto'" sv-ng-svg-icon></svg>
-        <div *ngIf="val.name && !model.isReadOnly" [class]="model.getRemoveButtonCss()"
-          (click)="model.doRemoveFile(val)">
-          <span [class]="model.cssClasses.removeFile">{{ model.removeFileCaption }}</span>
-          <svg *ngIf="model.cssClasses.removeFileSvgIconId" [title]="model.removeFileCaption"
-            [partCss]="model.cssClasses.removeFileSvg" [iconName]="model.cssClasses.removeFileSvgIconId" [size]="'auto'"
-            sv-ng-svg-icon></svg>
-        </div>
-      </div>
-      <div *ngIf="val.name && model.cssClasses.fileSignBottom" [class]="model.cssClasses.fileSignBottom">
-        <a (click)="model.doDownloadFile($event, val)" [attr.href]="val.content | safeUrl" [attr.title]="val.name"
-          [attr.download]="val.name" [style.width]="model.imageWidth">{{ val.name }}</a>
-      </div>
-    </span>
-  </div>
-</ng-template>
 <ng-template #fileCleanButton let-css="css">
   <button type="button" [class]="css" (click)="model.doClean()">
     <span>{{ model.clearButtonCaption }}</span>
