--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -29,12 +29,10 @@
   flex-grow: 1;
 
   .sd-title {
-    --default-font-size: var(--sjs-font-surveytitle-size, calc(2 * (var(--sjs-font-size, 16px))));
+    @include cover_title;
     color: $primary;
     font-family: $font-surveytitle-family;
-    font-size: var(--default-font-size);
     font-weight: $font-surveytitle-weight;
-    line-height: multiply(1.25, var(--default-font-size));
   }
 
   h3 {
