--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -29,11 +29,10 @@
   flex-grow: 1;
 
   .sd-title {
+    @include cover_title;
     color: $primary;
     font-family: $font-surveytitle-family;
-    font-size: $font-surveytitle-size;
     font-weight: $font-surveytitle-weight;
-    line-height: multiply(1.25, $font-surveytitle-size);
   }
 
   h3 {
@@ -62,6 +61,7 @@
 }
 
 .sd-root-modern {
+
   .sv-conver__content,
   .sd-container-modern__title {
     .sd-header__text h3 {
