Fixed #7067 - aria-progressbar-name - Ensures every ARIA progressbar node has an accessible name

--- a/packages/survey-angular-ui/src/components/progress/default/progress.component.html
+++ b/packages/survey-angular-ui/src/components/progress/default/progress.component.html
@@ -1,7 +1,7 @@
 <ng-template #template>
   <div [class]="model.getProgressCssClasses(container)">
     <div [class]="model.css.progressBar" [style.width]="model.progressValue + '%'"
-        role="progressbar" aria-valuemin="0" aria-valuemax="100">
+        role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-label="progress">
         <span [class]="getProgressTextInBarCss(model.css)">
           {{ model.progressText }}
         </span>
