Work for #7078: fix 'sv-file-preview' can't be overriden with showPreview: false in Knockout

--- a/src/knockout/templates/question-file.html
+++ b/src/knockout/templates/question-file.html
@@ -37,10 +37,8 @@
           <!-- ko template: { name: 'survey-question-file-video', data: { question: question } } --><!-- /ko -->          
           <!-- /ko -->
           <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButton} } --><!-- /ko -->
-          <!-- ko if: question.showPreview -->
-          <!-- ko if: question.koHasValue && question.allowShowPreview -->
+          <!-- ko if: question.allowShowPreview -->
           <!-- ko component: { name: 'sv-file-preview', data: { question: question } } --><!-- /ko -->          
-          <!-- /ko -->
           <!-- /ko -->
           <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButtonBottom} } --><!-- /ko -->
           <!-- ko if: question.fileNavigatorVisible -->
