--- a/src/knockout/components/cover/cover.html
+++ b/src/knockout/components/cover/cover.html
@@ -1,4 +1,4 @@
-<!-- ko if: (survey.titleView === 'cover' && survey.renderedHasHeader) -->
+<!-- ko if: (survey.headerView === 'advanced' && survey.renderedHasHeader) -->
 <div data-bind="css: model.coverClasses, style: { height: model.renderedHeight }">
   <!-- ko if: !!model.backgroundImage -->
   <div data-bind="style: model.backgroundImageStyle, css: model.backgroundImageClasses"></div>
