--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -12,7 +12,7 @@
       <form onsubmit="return false;">
           <div class="sv_custom_header" data-bind="visible: !hasLogo"></div>
           <div data-bind="css: containerCss">
-              <!-- ko if: titleView === 'title' -->
+              <!-- ko if: headerView === 'basic' -->
               <!-- ko template: { name: koTitleTemplate, afterRender: koAfterRenderHeader } -->
               <!-- /ko -->
               <!-- /ko -->
