--- a/src/knockout/components/cover/cover-cell.html
+++ b/src/knockout/components/cover/cover-cell.html
@@ -7,13 +7,13 @@
     </div>
     <!-- /ko -->
     <!-- ko if: showTitle -->
-    <div class="sv-cover__title" data-bind="style: { maxWidth: textWidth }">
+    <div class="sv-cover__title" data-bind="style: { maxWidth: textAreaWidth }">
     <!-- ko component: { name: 'survey-element-title', params: { element: survey } } -->
     <!-- /ko -->
     </div>
     <!-- /ko -->
     <!-- ko if: showDescription -->
-    <div class="sv-cover__description" data-bind="style: { maxWidth: textWidth }">
+    <div class="sv-cover__description" data-bind="style: { maxWidth: textAreaWidth }">
       <h5 data-bind="css: survey.css.description">
         <!-- ko template: { name: 'survey-string', data: survey.locDescription } -->
         <!-- /ko -->
