Work for #7064: fix paneldynamic remove btn dynamic component in Angular

--- a/packages/survey-angular-ui/src/questions/paneldynamic.component.html
+++ b/packages/survey-angular-ui/src/questions/paneldynamic.component.html
@@ -15,8 +15,8 @@
   <ng-container *ngFor="let panel of renderedPanels; index as index"> 
     <div [class]="model.getPanelWrapperCss()">
       <ng-template [component]="{ name: getPanelComponentName(panel), data: getPanelComponentData(panel) }"></ng-template>
-      <ng-container *ngIf="model.panelRemoveButtonLocation ==='right'">
-        <sv-ng-paneldynamic-remove-btn *ngIf="model.canRemovePanel && panel.state != 'collapsed' && model.panelRemoveButtonLocation == 'right'" [data]="{ panel: panel, question: model }"></sv-ng-paneldynamic-remove-btn>
+      <ng-container *ngIf="model.panelRemoveButtonLocation ==='right' && model.canRemovePanel && panel.state != 'collapsed'">
+        <ng-template [component]="{ name: 'sv-paneldynamic-remove-btn', data: { data: { panel, question: model }}}"></ng-template>
       </ng-container>
     </div>
     <!-- add track by [key]="'separator' + panel.id" -->
