work for the https://github.com/surveyjs/survey-library/issues/7073

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -64,6 +64,10 @@ sv-popup {
 }
 
 .sv-popup--confirm-delete {
+  .sv-popup__shadow {
+    height: initial;
+  }
+
   .sv-popup__container {
     border-radius: calcSize(1);
   }
